src/dprs/display/process_list/snapshots/dprs__dprs__display__process_list__tests__container_list_render_empty.snap
---
source: src/dprs/display/process_list/tests.rs
expression: terminal.backend().to_string()
---
"╭Docker Containers─────────────────────────────────────────────────────────────────────────────────╮"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
